# AED-Show-Tell

./: README.md  pyproject.toml
show&tell/: conexion.py  login.py  main.py  pruebas.py
show&tell/data/: datos_alumnos.json  datos_cursos.json  datos_docentes.json  datos_matriculas.json  datos_usuarios.json
show&tell/database/: controller.py
showandtell/: admin.py  conexion.py  docentes.py  guia-completa-pymongo.md  login.py  main.py  pruebas.py
showandtell/data/: datos_admin.json  datos_alumnos.json  datos_cursos.json  datos_docentes.json  datos_matriculas.json  datos_usuarios.json
showandtell/database/: controller.py  crud.py  database.py  database_init.py
showandtell/tabs/: admin_layout.py  alumnos_admin.py  alumnos_docente.py  cursos_admin.py  cursos_docente.py  cursos_usuario.py  dashboard_admin.py  dashboard_docente.py  dashboard_user.py  docente_layout.py  docentes_admin.py  login.py  matriculas_admin.py  user_config.py  user_layout.py  utils.py
showandtell/tests/: conftest.py  test_crud.py
showandtell/utils/: elements.py  validaciones.py
